# accelerated_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Core.cpp  Core.h  Grad.cpp  Grad.h  Handle.cpp  Handle.h  Picture.cpp  Picture.h  Ptr.cpp  Ptr.h  README.md  Ref_handle.cpp  Ref_handle.h  Str.cpp  Str.h  Student_info.cpp  Student_info.h  acceleratedcpp.sln  acceleratedcpp.vcxproj  grade.cpp  grade.h  main.cpp  median.cpp  median.h  sentence-categories-rules.txt  split.cpp  split.h  str.cpp  str.h  students.txt  vec.h
Google_tests/: CMakeLists.txt  acceleratedCppTest.cpp
